# doxa

./: .gitignore  .gitmodules  README.md
ergogen_v4/: README.md  doxa.yml
firmware/: CMakeLists.txt  Cargo.toml  Taskfile.yml  build.zig  conanfile.py
firmware/src/: CMakeLists.txt  main.cpp  rp2040.h
pcb/: kb-cache.lib  kb-rescue.kicad_sym  kb.kicad_pcb  kb.kicad_pro  kb.kicad_sch  kb.net  kb.pro  kb.sch  sym-lib-table
rest/: rest.scad
